--- a/assets/style.css
+++ b/assets/style.css
@@ -13,6 +13,10 @@ body {
     flex-wrap: wrap;
 }
 
+body footer {
+    text-align: center;
+    clear: both; width: 100%; height: 20%;
+}
 a {
     color: rgb(4, 4, 131);
 }
@@ -25,12 +29,24 @@ h2 {
     text-align: start;
     font-weight: bolder;
     font-size: 30px;
+    
 }
 
 p {
     text-align: left justify;
+    line-height: 1.5;
+    
 }
 
 hr {
+    color: rgb(11, 11, 190);
+}
+
+section {
+    float: left; width: 60%;
+}
+
+section p {
+    background-color: rgb(147, 151, 154);
     color: rgb(4, 4, 131);
 }
