Langkah 1.5 Ganti style css dikit

--- a/assets/style3.css
+++ b/assets/style3.css
@@ -8,6 +8,10 @@ body {
     background-color: rgb(99, 6, 99);
     color: gold;
     text-align: center;
+    font-family: "Nunito", helvetica, arial, sans-serif;
+    font-optical-sizing: auto;
+    font-weight: normal;
+    font-style: normal;
 
 }
 
