--- a/assets/style.css
+++ b/assets/style.css
@@ -11,6 +11,10 @@ body {
     background-color: silver;
     color: black;
     flex-wrap: wrap;
+    font-family: "Nunito", helvetica, arial, sans-serif;
+    font-optical-sizing: auto;
+    font-weight: normal;
+    font-style: normal;
 }
 
 body footer {
@@ -29,6 +33,11 @@ h2 {
     text-align: start;
     font-weight: bolder;
     font-size: 30px;
+    
+}
+h3 {
+    text-align: left justify;
+    line-height: 1.5;
     
 }
 
