--- a/assets/style.css
+++ b/assets/style.css
@@ -8,13 +8,19 @@
 }
 
 body {
-    background-color: silver;
-    color: black;
+    background-color: black;
+    color: snow;
     flex-wrap: wrap;
     font-family: "Nunito", helvetica, arial, sans-serif;
     font-optical-sizing: auto;
     font-weight: normal;
     font-style: normal;
+    text-align: center;
+    align-items: center;
+}
+
+body nav {
+    text-align: left;
 }
 
 body footer {
@@ -22,7 +28,7 @@ body footer {
     clear: both; width: 100%; height: 20%;
 }
 a {
-    color: rgb(4, 4, 131);
+    color: snow;
 }
 
 a:hover {
@@ -47,18 +53,15 @@ p {
     
 }
 
-hr {
-    color: rgb(11, 11, 190);
-}
+
 
 section {
      width: 100%;
 }
 
 section p {
-    background-color: rgb(147, 151, 154);
-    color: rgb(4, 4, 131);
-}
+    background-color: black;
+    color: silver
 
 @media screen and (min-width: 768px) {
     .container {
@@ -85,7 +88,7 @@ section p {
 }
 
 .item {
-    background-color: rgb(102, 105, 108);
+    background-color: black;
 }
 .container {
         display: grid;
